# NordVPNKrunner

./: .changescommit.swp  .gitignore  CMakeLists.txt  NordVPN.kdev4  README.md  install-user.sh  install.sh  postinst  uninstall.sh
.kdev4/: NordVPN.kdev4
src/: CMakeLists.txt  Config.cpp  Config.h  Match.cpp  Match.h  Status.cpp  Status.h  nordvpn.cpp  nordvpn.h  plasma-runner-nordvpn.desktop
src/config/: nordvpn_config.cpp  nordvpn_config.h  nordvpn_config.ui  plasma-runner-nordvpn_config.desktop
src/core/: CMakeLists.txt  NotificationManager.cpp  NotificationManager.h  ProcessManager.cpp  ProcessManager.h  Status.cpp  Status.h  Utilities.cpp  Utilities.h  krunner_nordvpn.notifyrc
src/runner/: Match.cpp  Match.h  nordvpn.cpp  nordvpn.h  plasma-runner-nordvpn.desktop  plasma-runner-nordvpn.desktop.in  plasma-runner-nordvpn.json.in
